multiple selection img icons

--- a/style.css
+++ b/style.css
@@ -84,6 +84,9 @@ h1 {
     .showfruits>li {
        margin-top:10px
     }
+    .showfruits>li>a>img{
+        width: 22px;
+    }
     .displayButtonsProds {
         border: none;
         background: none;
