--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ h1 {
         display: flex;
         align-items: center;
         color: white;
+        touch-action: manipulation;
     }
 }
 
@@ -335,11 +336,16 @@ h1 {
         display: flex;
         align-items: center;
         color: white;
+        touch-action: manipulation;
     }
 }
 
 
-@media (max-width: 991.98px) {}
+@media (max-width: 991.98px) {
+
+
+
+}
 
 
 @media (max-width: 1199.98px) {}
