--- a/style.css
+++ b/style.css
@@ -11,20 +11,24 @@ nav {
     align-items: center;
     position: fixed;
     width: 100%;
+
 }
+
 /* ELIMINAR MARGO DE BOTONES */
-button{
+button {
     outline: none;
 }
+
 /* LOGO */
 h1 {
     font-family: Miltonian Tattoo;
 }
 
-.disableZoombutton{
+.disableZoombutton {
     touch-action: manipulation;
 }
-/* CSS PARA TAMAÑOS MOBILE */
+
+
 @media (max-width: 575.98px) {
 
     /* AJUSTE DE TAMAÑO IMAGENES NAV */
@@ -86,7 +90,14 @@ h1 {
     .showUlProducts>li {
         margin-top: 10px;
     }
-
+/* OCULTAR IMAGENES EN VERSION MOBILE */
+.showUlProducts>li>a>img{
+    display: none;
+}
+   /* OCULTAR IMAGENES EN VERSION MOBILE */
+   .showUlProducts>li>button>img:nth-child(1){
+    display: none;
+}
     /* OCULTAR LISTA DE FRUTAS */
     .ulFruits {
         display: none;
@@ -184,9 +195,10 @@ h1 {
 }
 
 
-@media (max-width: 767.98px) {
-     /* AJUSTE DE TAMAÑO IMAGENES NAV */
-     nav>div>button>img {
+@media (min-width: 576px) and (max-width: 767.98px) {
+
+    /* AJUSTE DE TAMAÑO IMAGENES NAV */
+    nav>div>button>img {
         width: 23px;
     }
 
@@ -244,7 +256,14 @@ h1 {
     .showUlProducts>li {
         margin-top: 10px;
     }
-
+/* OCULTAR IMAGENES EN VERSION MOBILE */
+    .showUlProducts>li>a>img{
+        display: none;
+    }
+    /* OCULTAR IMAGENES EN VERSION MOBILE */
+    .showUlProducts>li>button>img:nth-child(1){
+        display: none;
+    }
     /* OCULTAR LISTA DE FRUTAS */
     .ulFruits {
         display: none;
@@ -342,11 +361,178 @@ h1 {
 }
 
 
-@media (max-width: 991.98px) {
+@media (min-width: 768px) and (max-width: 991.98px) {
 
+   
 
+    nav>div:nth-child(1) {
+        margin-left: 2%;
+
+    }
+
+    nav>div:nth-child(3) {
+        margin-right: 4%;
+
+    }
+
+    nav>div:nth-child(2)>button {
+        display: none;
+    }
+
+    /* AJUSTE DE TAMAÑO IMAGENES NAV */
+    nav>div>button>img {
+        width: 23px;
+    }
+
+    /* ESTILO PARA LOS BOTONES DE DROPDOWN DEL MENÚ */
+    .displayButtonsProds {
+        border: none;
+        background: none;
+        padding: 0px;
+        font-size: 14px;
+        display: flex;
+        align-items: center;
+    }
+
+    /* AJUSTE DE STILOS DE BOTONES MENU Y CARRO */
+    nav>div>button {
+        background: none;
+        border-style: none;
+    }
+
+    .listProducts {
+        display: flex;
+        align-items: center;
+        list-style-type: none;
+    }
+
+    .listProducts>li {
+        margin-left: 6px;
+    }
+
+    /* OCULTAR DROPDOWN DE PRODUCTOS */
+    .ulProducts {
+        display: none;
+    }
+
+    /* MOSTRAR LIST DE DROPDOWN PRODUCTOS */
+    .showUlProducts {
+        display: flex;
+        padding-bottom: 30px;
+        list-style: none;
+        position: absolute;
+        background-color: white;
+        left: 0px;
+        justify-content: space-between;
+        margin-top: 24px;
+        flex-wrap: wrap;
+        padding-right: 40px;
+        padding-top: 30px;
+    }
+
+    .showfruits {
+        display: flex;
+        padding-bottom: 16px;
+        list-style: none;
+        padding-top: 10px;
+        flex-direction: row;
+        padding-left: 10px;
+        padding-right: 10px;
+        flex-wrap: wrap;
+        left: 0px;
+        top: 290px;
+        position: absolute;
+        background: white;
+        border-top: solid;
+        border-top-width: 1px;
+        border-top-color: brown;
+        justify-content: center;
+        border-bottom-right-radius: 60px;
+        border-bottom-left-radius: 60px;
+    }
+    .showfruits>li {
+        width: 185px;
+        margin-top: 8px;
+    }
+
+    .showUlProducts>li {
+        margin-top: 10px;
+        font-weight: bold;
+        font-size: 20px;
+        color: black;
+        width: 229px;
+    }
+    .showUlProducts>li>a{
+        display: flex;
+        align-items: center;
+    }
+    .showUlProducts>li>a>img{
+        width: 48px;
+    }
+    .showUlProducts>li>button {
+        font-weight: bold;
+        font-size: 16px;
+    }
+    .showfruits>li>a>img {
+        width: 35px;
+    }
+    .showfruits>li>a {
+        font-size: 15px;
+        font-weight: 600;
+    }
+
+    .ulFruits {
+        display: none;
+    }
+
+    .showVerduras{
+            display: flex;
+            padding-bottom: 16px;
+            list-style: none;
+            padding-top: 10px;
+            flex-direction: row;
+            padding-left: 10px;
+            padding-right: 10px;
+            flex-wrap: wrap;
+            left: 0px;
+            top: 290px;
+            position: absolute;
+            background: white;
+            border-top: solid;
+            border-top-width: 1px;
+            border-top-color: brown;
+            justify-content: center;
+            border-bottom-right-radius: 60px;
+            border-bottom-left-radius: 60px;
+        }
+        .showVerduras>li {
+            width: 185px;
+            margin-top: 8px;
+        }
+        .showVerduras>li>a {
+            font-size: 16px;
+            font-weight: 600;
+        }
+        .showVerduras>li>a>img {
+            width: 35px;
+        }
+    .ulVerduras {
+        display: none;
+    }
+
+    .cartStyleLI {
+        display: none;
+    }
+
+    .buttonCart {
+        display: flex;
+        align-items: center;
+        color: white;
+    }
 
 }
 
+@media (min-width: 992px) and (max-width: 1199.98px) {}
 
-@media (max-width: 1199.98px) {}
+
+@media (min-width: 1200px) {}
