--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ nav {
     align-items: center;
     position: fixed;
     width: 100%;
-
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
 }
 
 /* ELIMINAR MARGO DE BOTONES */
@@ -90,17 +90,14 @@ h1 {
     .showUlProducts>li {
         margin-top: 10px;
     }
-
-    /* OCULTAR IMAGENES EN VERSION MOBILE */
-    .showUlProducts>li>a>img {
-        display: none;
-    }
-
-    /* OCULTAR IMAGENES EN VERSION MOBILE */
-    .showUlProducts>li>button>img:nth-child(1) {
-        display: none;
-    }
-
+/* OCULTAR IMAGENES EN VERSION MOBILE */
+.showUlProducts>li>a>img{
+    display: none;
+}
+   /* OCULTAR IMAGENES EN VERSION MOBILE */
+   .showUlProducts>li>button>img:nth-child(1){
+    display: none;
+}
     /* OCULTAR LISTA DE FRUTAS */
     .ulFruits {
         display: none;
@@ -259,17 +256,14 @@ h1 {
     .showUlProducts>li {
         margin-top: 10px;
     }
-
-    /* OCULTAR IMAGENES EN VERSION MOBILE */
-    .showUlProducts>li>a>img {
+/* OCULTAR IMAGENES EN VERSION MOBILE */
+    .showUlProducts>li>a>img{
         display: none;
     }
-
     /* OCULTAR IMAGENES EN VERSION MOBILE */
-    .showUlProducts>li>button>img:nth-child(1) {
+    .showUlProducts>li>button>img:nth-child(1){
         display: none;
     }
-
     /* OCULTAR LISTA DE FRUTAS */
     .ulFruits {
         display: none;
@@ -366,7 +360,11 @@ h1 {
     }
 }
 
+
 @media (min-width: 768px) and (max-width: 991.98px) {
+
+   
+
     nav>div:nth-child(1) {
         margin-left: 2%;
 
@@ -410,185 +408,8 @@ h1 {
 
     .listProducts>li {
         margin-left: 6px;
-    }
-
-    /* OCULTAR DROPDOWN DE PRODUCTOS */
-    .ulProducts {
-        display: none;
-    }
-
-    /* MOSTRAR LIST DE DROPDOWN PRODUCTOS */
-    .showUlProducts {
-        display: flex;
-        padding-bottom: 30px;
-        list-style: none;
-        position: absolute;
-        background-color: white;
-        left: 0px;
-        justify-content: space-between;
-        margin-top: 24px;
-        flex-wrap: wrap;
-        padding-right: 40px;
-        padding-top: 30px;
-    }
-
-    .showfruits {
-        display: flex;
-        padding-bottom: 16px;
-        list-style: none;
-        padding-top: 10px;
-        flex-direction: row;
-        padding-left: 10px;
-        padding-right: 10px;
-        flex-wrap: wrap;
-        left: 0px;
-        top: 290px;
-        position: absolute;
-        background: white;
-        border-top: solid;
-        border-top-width: 1px;
-        border-top-color: brown;
-        justify-content: center;
-        border-bottom-right-radius: 60px;
-        border-bottom-left-radius: 60px;
-    }
-
-    .showfruits>li {
-        width: 185px;
-        margin-top: 8px;
-    }
-
-    .showUlProducts>li {
-        margin-top: 10px;
-        font-weight: bold;
-        font-size: 20px;
-        color: black;
-        width: 229px;
-    }
-
-    .showUlProducts>li>a {
-        display: flex;
-        align-items: center;
-    }
-
-    .showUlProducts>li>a>img {
-        width: 48px;
-    }
-
-    .showUlProducts>li>button {
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .showfruits>li>a>img {
-        width: 35px;
-    }
-
-    .showfruits>li>a {
-        font-size: 15px;
-        font-weight: 600;
-    }
-
-    .ulFruits {
-        display: none;
-    }
-
-    .showVerduras {
-        display: flex;
-        padding-bottom: 16px;
-        list-style: none;
-        padding-top: 10px;
-        flex-direction: row;
-        padding-left: 10px;
-        padding-right: 10px;
-        flex-wrap: wrap;
-        left: 0px;
-        top: 290px;
-        position: absolute;
-        background: white;
-        border-top: solid;
-        border-top-width: 1px;
-        border-top-color: brown;
-        justify-content: center;
-        border-bottom-right-radius: 60px;
-        border-bottom-left-radius: 60px;
-    }
-
-    .showVerduras>li {
-        width: 185px;
-        margin-top: 8px;
-    }
-
-    .showVerduras>li>a {
-        font-size: 16px;
-        font-weight: 600;
-    }
-
-    .showVerduras>li>a>img {
-        width: 35px;
-    }
-
-    .ulVerduras {
-        display: none;
-    }
-
-    .cartStyleLI {
-        display: none;
-    }
-
-    .buttonCart {
-        display: flex;
-        align-items: center;
-        color: white;
-    }
-
-}
-
-@media (min-width: 992px) and (max-width: 1199.98px) {
-
-    nav>div:nth-child(1) {
-        margin-left: 2%;
-
-    }
-
-    nav>div:nth-child(3) {
-        margin-right: 4%;
-
-    }
-
-    nav>div:nth-child(2)>button {
-        display: none;
-    }
-
-    /* AJUSTE DE TAMAÑO IMAGENES NAV */
-    nav>div>button>img {
-        width: 23px;
-    }
-
-    /* ESTILO PARA LOS BOTONES DE DROPDOWN DEL MENÚ */
-    .displayButtonsProds {
-        border: none;
-        background: none;
-        padding: 0px;
+        font-family: Montserrat;
         font-size: 14px;
-        display: flex;
-        align-items: center;
-    }
-
-    /* AJUSTE DE STILOS DE BOTONES MENU Y CARRO */
-    nav>div>button {
-        background: none;
-        border-style: none;
-    }
-
-    .listProducts {
-        display: flex;
-        align-items: center;
-        list-style-type: none;
-    }
-
-    .listProducts>li {
-        margin-left: 30px;
     }
 
     /* OCULTAR DROPDOWN DE PRODUCTOS */
@@ -596,6 +417,9 @@ h1 {
         display: none;
     }
 
+    .showUlProducts>li>button>img:nth-child(2){
+        transform: rotate(270deg);
+    }
     /* MOSTRAR LIST DE DROPDOWN PRODUCTOS */
     .showUlProducts {
         display: flex;
@@ -603,12 +427,14 @@ h1 {
         list-style: none;
         position: absolute;
         background-color: white;
-        left: 0px;
         justify-content: space-between;
         margin-top: 24px;
         flex-wrap: wrap;
         padding-right: 40px;
         padding-top: 30px;
+        width: 201px;
+        box-shadow: 0px 49px 81px -23px rgba(0,0,0,0.75);
+        font-family: Pacifico;
     }
 
     .showfruits {
@@ -620,237 +446,55 @@ h1 {
         padding-left: 10px;
         padding-right: 10px;
         flex-wrap: wrap;
-        left: 0px;
-        top: 232px;
+        left: 281px;
+        top: 73px;
         position: absolute;
         background: white;
-        border-top: solid;
-        border-top-width: 1px;
-        border-top-color: brown;
         justify-content: center;
-        border-bottom-right-radius: 60px;
-        border-bottom-left-radius: 60px;
+        border-left: solid;
+        border-left-width: 1px;
+        box-shadow: 25px 42px 44px -23px rgba(0,0,0,0.75);
     }
-
     .showfruits>li {
         width: 185px;
-        margin-top: 8px;
+        margin-top: 3px;
     }
 
     .showUlProducts>li {
         margin-top: 10px;
         font-weight: bold;
-        font-size: 20px;
+        font-size: 16px;
         color: black;
         width: 229px;
     }
-
     .showUlProducts>li>a {
         display: flex;
         align-items: center;
     }
-
     .showUlProducts>li>a>img {
-        width: 48px;
+        width: 22px;
     }
-
     .showUlProducts>li>button {
         font-weight: bold;
         font-size: 16px;
+        font-family: pacifico;
     }
-
     .showfruits>li>a>img {
-        width: 35px;
+        width: 26px;
     }
-
     .showfruits>li>a {
-        font-size: 15px;
-        font-weight: 600;
-    }
-
-    .ulFruits {
-        display: none;
-    }
-
-    .showVerduras {
-        display: flex;
-        padding-bottom: 16px;
-        list-style: none;
-        padding-top: 10px;
-        flex-direction: row;
-        padding-left: 10px;
-        padding-right: 10px;
-        flex-wrap: wrap;
-        left: 0px;
-        top: 234px;
-        position: absolute;
-        background: white;
-        border-top: solid;
-        border-top-width: 1px;
-        border-top-color: brown;
-        justify-content: center;
-        border-bottom-right-radius: 60px;
-        border-bottom-left-radius: 60px;
-    }
-
-    .showVerduras>li {
-        width: 185px;
-        margin-top: 8px;
-    }
-
-    .showVerduras>li>a {
-        font-size: 16px;
-        font-weight: 600;
-    }
-
-    .showVerduras>li>a>img {
-        width: 35px;
-    }
-
-    .ulVerduras {
-        display: none;
-    }
-
-    .cartStyleLI {
-        display: none;
-    }
-
-    .buttonCart {
-        display: flex;
-        align-items: center;
-        color: white;
-    }
-}
-
-
-@media (min-width: 1200px) {
-    nav>div:nth-child(1) {
-        margin-left: 2%;
-
-    }
-
-    nav>div:nth-child(3) {
-        margin-right: 4%;
-
-    }
-
-    nav>div:nth-child(2)>button {
-        display: none;
-    }
-
-    /* AJUSTE DE TAMAÑO IMAGENES NAV */
-    nav>div>button>img {
-        width: 23px;
-    }
-
-    /* ESTILO PARA LOS BOTONES DE DROPDOWN DEL MENÚ */
-    .displayButtonsProds {
-        border: none;
-        background: none;
-        padding: 0px;
         font-size: 14px;
-        display: flex;
-        align-items: center;
-    }
-
-    /* AJUSTE DE STILOS DE BOTONES MENU Y CARRO */
-    nav>div>button {
-        background: none;
-        border-style: none;
-    }
-
-    .listProducts {
-        display: flex;
-        align-items: center;
-        list-style-type: none;
-    }
-
-    .listProducts>li {
-        margin-left: 30px;
-    }
-
-    /* OCULTAR DROPDOWN DE PRODUCTOS */
-    .ulProducts {
-        display: none;
-    }
-
-    /* MOSTRAR LIST DE DROPDOWN PRODUCTOS */
-    .showUlProducts {
-        display: flex;
-        padding-bottom: 30px;
-        list-style: none;
-        position: absolute;
-        background-color: white;
-        left: 0px;
-        justify-content: space-between;
-        margin-top: 24px;
-        flex-wrap: wrap;
-        padding-right: 40px;
-        padding-top: 30px;
-    }
-
-    .showfruits {
-        display: flex;
-        padding-bottom: 16px;
-        list-style: none;
-        padding-top: 10px;
-        flex-direction: row;
-        padding-left: 10px;
-        padding-right: 10px;
-        flex-wrap: wrap;
-        left: 0px;
-        top: 232px;
-        position: absolute;
-        background: white;
-        border-top: solid;
-        border-top-width: 1px;
-        border-top-color: brown;
-        justify-content: center;
-        border-bottom-right-radius: 60px;
-        border-bottom-left-radius: 60px;
-    }
-
-    .showfruits>li {
-        width: 185px;
-        margin-top: 8px;
-    }
-
-    .showUlProducts>li {
-        margin-top: 10px;
-        font-weight: bold;
-        font-size: 20px;
-        color: black;
-        width: 229px;
-    }
-
-    .showUlProducts>li>a {
-        display: flex;
-        align-items: center;
-    }
-
-    .showUlProducts>li>a>img {
-        width: 48px;
-    }
-
-    .showUlProducts>li>button {
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .showfruits>li>a>img {
-        width: 35px;
-    }
-
-    .showfruits>li>a {
-        font-size: 15px;
         font-weight: 600;
     }
 
     .ulFruits {
         display: none;
     }
+.showUlProducts>li>button>img:nth-child(1){
+    width: 20px;
+}
 
-    .showVerduras {
+    .showVerduras{
         display: flex;
         padding-bottom: 16px;
         list-style: none;
@@ -859,32 +503,26 @@ h1 {
         padding-left: 10px;
         padding-right: 10px;
         flex-wrap: wrap;
-        left: 0px;
-        top: 234px;
+        left: 281px;
+        top: 73px;
         position: absolute;
         background: white;
-        border-top: solid;
-        border-top-width: 1px;
-        border-top-color: brown;
         justify-content: center;
-        border-bottom-right-radius: 60px;
-        border-bottom-left-radius: 60px;
+        border-left: solid;
+        border-left-width: 1px;
+        box-shadow: 25px 42px 44px -23px rgba(0,0,0,0.75);
     }
-
-    .showVerduras>li {
-        width: 185px;
-        margin-top: 8px;
-    }
-
-    .showVerduras>li>a {
-        font-size: 16px;
-        font-weight: 600;
-    }
-
-    .showVerduras>li>a>img {
-        width: 35px;
-    }
-
+        .showVerduras>li {
+            width: 185px;
+            margin-top: 3px;
+        }
+        .showVerduras>li>a {
+            font-size: 14px;
+            font-weight: 600;
+        }
+        .showVerduras>li>a>img {
+            width: 26px;
+        }
     .ulVerduras {
         display: none;
     }
@@ -898,4 +536,10 @@ h1 {
         align-items: center;
         color: white;
     }
+
 }
+
+@media (min-width: 992px) and (max-width: 1199.98px) {}
+
+
+@media (min-width: 1200px) {}
