--- a/style.css
+++ b/style.css
@@ -539,7 +539,353 @@ h1 {
 
 }
 
-@media (min-width: 992px) and (max-width: 1199.98px) {}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+
+    nav>div:nth-child(1) {
+        margin-left: 2%;
+
+    }
+
+    nav>div:nth-child(3) {
+        margin-right: 4%;
+
+    }
+
+    nav>div:nth-child(2)>button {
+        display: none;
+    }
+
+    /* AJUSTE DE TAMAÑO IMAGENES NAV */
+    nav>div>button>img {
+        width: 23px;
+    }
+
+    /* ESTILO PARA LOS BOTONES DE DROPDOWN DEL MENÚ */
+    .displayButtonsProds {
+        border: none;
+        background: none;
+        padding: 0px;
+        font-size: 14px;
+        display: flex;
+        align-items: center;
+    }
+
+    /* AJUSTE DE STILOS DE BOTONES MENU Y CARRO */
+    nav>div>button {
+        background: none;
+        border-style: none;
+    }
+
+    .listProducts {
+        display: flex;
+        align-items: center;
+        list-style-type: none;
+    }
+
+    .listProducts>li {
+        margin-left: 20px;
+        font-family: Montserrat;
+        font-size: 14px;
+    }
+
+    /* OCULTAR DROPDOWN DE PRODUCTOS */
+    .ulProducts {
+        display: none;
+    }
+
+    .showUlProducts>li>button>img:nth-child(2){
+        transform: rotate(270deg);
+    }
+    /* MOSTRAR LIST DE DROPDOWN PRODUCTOS */
+    .showUlProducts {
+        display: flex;
+        padding-bottom: 30px;
+        list-style: none;
+        position: absolute;
+        background-color: white;
+        justify-content: space-between;
+        margin-top: 24px;
+        flex-wrap: wrap;
+        padding-right: 40px;
+        padding-top: 30px;
+        width: 201px;
+        box-shadow: 0px 49px 81px -23px rgba(0,0,0,0.75);
+        font-family: Pacifico;
+    }
+
+    .showfruits {
+        display: flex;
+        padding-bottom: 16px;
+        list-style: none;
+        padding-top: 10px;
+        flex-direction: row;
+        padding-left: 10px;
+        padding-right: 10px;
+        flex-wrap: wrap;
+        left: 281px;
+        top: 73px;
+        position: absolute;
+        background: white;
+        justify-content: center;
+        border-left: solid;
+        border-left-width: 1px;
+        box-shadow: 25px 42px 44px -23px rgba(0,0,0,0.75);
+    }
+    .showfruits>li {
+        width: 185px;
+        margin-top: 3px;
+    }
+
+    .showUlProducts>li {
+        margin-top: 10px;
+        font-weight: bold;
+        font-size: 16px;
+        color: black;
+        width: 229px;
+    }
+    .showUlProducts>li>a {
+        display: flex;
+        align-items: center;
+    }
+    .showUlProducts>li>a>img {
+        width: 22px;
+    }
+    .showUlProducts>li>button {
+        font-weight: bold;
+        font-size: 16px;
+        font-family: pacifico;
+    }
+    .showfruits>li>a>img {
+        width: 26px;
+    }
+    .showfruits>li>a {
+        font-size: 14px;
+        font-weight: 600;
+    }
+
+    .ulFruits {
+        display: none;
+    }
+.showUlProducts>li>button>img:nth-child(1){
+    width: 20px;
+}
+
+    .showVerduras{
+        display: flex;
+        padding-bottom: 16px;
+        list-style: none;
+        padding-top: 10px;
+        flex-direction: row;
+        padding-left: 10px;
+        padding-right: 10px;
+        flex-wrap: wrap;
+        left: 281px;
+        top: 73px;
+        position: absolute;
+        background: white;
+        justify-content: center;
+        border-left: solid;
+        border-left-width: 1px;
+        box-shadow: 25px 42px 44px -23px rgba(0,0,0,0.75);
+    }
+        .showVerduras>li {
+            width: 185px;
+            margin-top: 3px;
+        }
+        .showVerduras>li>a {
+            font-size: 14px;
+            font-weight: 600;
+        }
+        .showVerduras>li>a>img {
+            width: 26px;
+        }
+    .ulVerduras {
+        display: none;
+    }
+
+    .cartStyleLI {
+        display: none;
+    }
+
+    .buttonCart {
+        display: flex;
+        align-items: center;
+        color: white;
+    }
+}
 
 
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+
+    nav>div:nth-child(1) {
+        margin-left: 2%;
+
+    }
+
+    nav>div:nth-child(3) {
+        margin-right: 4%;
+
+    }
+
+    nav>div:nth-child(2)>button {
+        display: none;
+    }
+
+    /* AJUSTE DE TAMAÑO IMAGENES NAV */
+    nav>div>button>img {
+        width: 23px;
+    }
+
+    /* ESTILO PARA LOS BOTONES DE DROPDOWN DEL MENÚ */
+    .displayButtonsProds {
+        border: none;
+        background: none;
+        padding: 0px;
+        font-size: 14px;
+        display: flex;
+        align-items: center;
+    }
+
+    /* AJUSTE DE STILOS DE BOTONES MENU Y CARRO */
+    nav>div>button {
+        background: none;
+        border-style: none;
+    }
+
+    .listProducts {
+        display: flex;
+        align-items: center;
+        list-style-type: none;
+    }
+
+    .listProducts>li {
+        margin-left: 37px;
+        font-family: Montserrat;
+        font-size: 14px;
+    }
+
+    /* OCULTAR DROPDOWN DE PRODUCTOS */
+    .ulProducts {
+        display: none;
+    }
+
+    .showUlProducts>li>button>img:nth-child(2){
+        transform: rotate(270deg);
+    }
+    /* MOSTRAR LIST DE DROPDOWN PRODUCTOS */
+    .showUlProducts {
+        display: flex;
+        padding-bottom: 30px;
+        list-style: none;
+        position: absolute;
+        background-color: white;
+        justify-content: space-between;
+        margin-top: 24px;
+        flex-wrap: wrap;
+        padding-right: 40px;
+        padding-top: 30px;
+        width: 201px;
+        box-shadow: 0px 49px 81px -23px rgba(0,0,0,0.75);
+        font-family: Pacifico;
+    }
+
+    .showfruits {
+        display: flex;
+        padding-bottom: 16px;
+        list-style: none;
+        padding-top: 10px;
+        flex-direction: row;
+        padding-left: 10px;
+        padding-right: 10px;
+        flex-wrap: wrap;
+        left: 281px;
+        top: 73px;
+        position: absolute;
+        background: white;
+        justify-content: center;
+        border-left: solid;
+        border-left-width: 1px;
+        box-shadow: 25px 42px 44px -23px rgba(0,0,0,0.75);
+    }
+    .showfruits>li {
+        width: 185px;
+        margin-top: 3px;
+    }
+
+    .showUlProducts>li {
+        margin-top: 10px;
+        font-weight: bold;
+        font-size: 16px;
+        color: black;
+        width: 229px;
+    }
+    .showUlProducts>li>a {
+        display: flex;
+        align-items: center;
+    }
+    .showUlProducts>li>a>img {
+        width: 22px;
+    }
+    .showUlProducts>li>button {
+        font-weight: bold;
+        font-size: 16px;
+        font-family: pacifico;
+    }
+    .showfruits>li>a>img {
+        width: 26px;
+    }
+    .showfruits>li>a {
+        font-size: 14px;
+        font-weight: 600;
+    }
+
+    .ulFruits {
+        display: none;
+    }
+.showUlProducts>li>button>img:nth-child(1){
+    width: 20px;
+}
+
+    .showVerduras{
+        display: flex;
+        padding-bottom: 16px;
+        list-style: none;
+        padding-top: 10px;
+        flex-direction: row;
+        padding-left: 10px;
+        padding-right: 10px;
+        flex-wrap: wrap;
+        left: 281px;
+        top: 73px;
+        position: absolute;
+        background: white;
+        justify-content: center;
+        border-left: solid;
+        border-left-width: 1px;
+        box-shadow: 25px 42px 44px -23px rgba(0,0,0,0.75);
+    }
+        .showVerduras>li {
+            width: 185px;
+            margin-top: 3px;
+        }
+        .showVerduras>li>a {
+            font-size: 14px;
+            font-weight: 600;
+        }
+        .showVerduras>li>a>img {
+            width: 26px;
+        }
+    .ulVerduras {
+        display: none;
+    }
+
+    .cartStyleLI {
+        display: none;
+    }
+
+    .buttonCart {
+        display: flex;
+        align-items: center;
+        color: white;
+    }
+}
