--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ nav {
     box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
 }
 
+.showUlProducts>li>hr{
+    width: 151px;
+    margin: 0px;
+}
 /* ELIMINAR MARGO DE BOTONES */
 button {
     outline: none;
