--- a/style.css
+++ b/style.css
@@ -206,6 +206,9 @@ h1 {
         align-items: center;
         color: white;
     }
+    .buttonCart>span{
+        display: none;
+    }
 }
 
 
@@ -380,6 +383,9 @@ h1 {
         display: flex;
         align-items: center;
         color: white;
+    }
+    .buttonCart>span{
+        display: none;
     }
 }
 
@@ -571,7 +577,9 @@ h1 {
         align-items: center;
         color: white;
     }
-
+    .buttonCart>span{
+        display: none;
+    }
 }
 
 @media (min-width: 992px) and (max-width: 1199.98px) {
@@ -758,6 +766,9 @@ h1 {
         display: flex;
         align-items: center;
         color: white;
+    }
+    .buttonCart>span{
+        font-size: 15px;
     }
 }
 
@@ -946,5 +957,8 @@ h1 {
         display: flex;
         align-items: center;
         color: white;
+    }
+    .buttonCart>span{
+        font-size: 16px;
     }
 }
