--- a/style.css
+++ b/style.css
@@ -205,6 +205,8 @@ h1 {
         display: flex;
         align-items: center;
         color: white;
+        background: none;
+        border-style: none;
     }
     .buttonCart>span{
         display: none;
@@ -383,6 +385,8 @@ h1 {
         display: flex;
         align-items: center;
         color: white;
+        background: none;
+        border-style: none;
     }
     .buttonCart>span{
         display: none;
@@ -576,6 +580,8 @@ h1 {
         display: flex;
         align-items: center;
         color: white;
+        background: none;
+        border-style: none;
     }
     .buttonCart>span{
         display: none;
@@ -766,6 +772,8 @@ h1 {
         display: flex;
         align-items: center;
         color: white;
+        background: none;
+        border-style: none;
     }
     .buttonCart>span{
         font-size: 15px;
@@ -957,6 +965,8 @@ h1 {
         display: flex;
         align-items: center;
         color: white;
+        background: none;
+        border-style: none;
     }
     .buttonCart>span{
         font-size: 16px;
