--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    touch-action: manipulation; 
+}
+
 body {
     margin: 0px
 }
@@ -13,7 +17,6 @@ body {
 button {
     outline: none;
 }
-
 /* LOGO */
 h1 {
     font-family: Miltonian Tattoo;
