--- a/style.css
+++ b/style.css
@@ -25,8 +25,16 @@ button {
 }
 
 /* LOGO */
-h1 {
+nav>div:nth-child(1)>a {
+    display: block;
     font-family: Miltonian Tattoo;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+
 }
 
 .disableZoombutton {
